projects/nextcloud/nextcloud-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway
  namespace: nextcloud
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway-system
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - nextcloud.jtanprojects.com
  rules:
    - backendRefs:
        - name: nextcloud
          port: 80
